--- a/style.css
+++ b/style.css
@@ -13,10 +13,30 @@
 .container .images .reactjs-image{
     margin-right: 50px;
     height: 130px;
+    border: none;
+    animation: rotateCircle 4s infinite linear;
+    cursor: pointer;
 }
+
+@keyframes rotateCircle {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+    
+.container .images .reactjs-image:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 255, 0.5);
+    border: none;
+    transition: 0.1s ease 0.1s;
+}
+
 
 .container .images .vite-image{
     height: 130px;
+    cursor: pointer;
 }
 
 
@@ -32,6 +52,36 @@
     padding-right: 30px;
 }
 
+.count-button{
+    margin-top:20px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 10px;
+    color: #414141;
+    font-weight: 800;
+    outline:none;
+    border: none;
+}
+    
+.count-button:hover{
+    border: 1px solid red;
+    cursor: pointer;
+    outline: none;        
+}
 
+.container p{
+    margin: 10px;
+}
+
+.container p{
+    margin: 30px auto;  
+    font-size: 1.1rem;
+}
+
+.container .last-line{
+    margin: 30px;
+    font-size: 1.2rem;
+    display: inline-block;
+}
 
 
