--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@
     font-weight: 800;
     outline:none;
     border: none;
+    background-color: #8080804c;
+    
 }
     
 .count-button:hover{
