--- a/style.css
+++ b/style.css
@@ -28,17 +28,24 @@
 }
         
 .container .images .reactjs-image:hover{
-    box-shadow: 0px 0px 10px blue;
     border: none;
-    box-shadow: none;
+    transition: filter 300ms;
+    filter: drop-shadow(0 0 2em #646cffaa);
     transition: 0.1s ease 0.1s;
 }
 
 
-.container .images .vite-image{
+.container .images .vite-image {
     height: 130px;
     cursor: pointer;
 }
+
+.container .images .vite-image:hover {
+    filter: drop-shadow(0 0 2em #35c8f1aa);
+    border: none;
+    transition: filter 300ms, all 0.5s ease 0.1s;
+}
+
 
 
 .heading{
